fix: disable double tap scale on mobile devices

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -2,3 +2,7 @@ html {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
 }
+
+body {
+    touch-action: manipulation;
+}
